--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -125,8 +125,7 @@
             </div>
           </div>
           <div class="single_catagory">
-            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
-              href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download><i
+            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
                 class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
@@ -228,12 +227,9 @@
 
   <script src="../js/jquery.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+  <script src="../js/popper.min.js"></script>
+
+  <script src="../js/bootstrap.min.js"></script>
     
   <script src="../js/pw.bundle.js"></script>
 
