--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -69,7 +69,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/4baefCu.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/5I39ojc.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -165,14 +165,14 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/Hfz9sVw.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/Hfz9sVw.png" class="img-fluid" alt="web-2"></a>
+                    <a href="https://i.imgur.com/FOIxP1b.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/FOIxP1b.png" class="img-fluid" alt="web-2"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/5SxD36w.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/5SxD36w.png" class="img-fluid" alt="web-3"></a>
+                    <a href="https://i.imgur.com/nh04Zlb.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/nh04Zlb.png" class="img-fluid" alt="web-3"></a>
                   </div>
                 </div>
               </div>
