--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -165,8 +165,8 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/FOIxP1b.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/FOIxP1b.png" class="img-fluid" alt="web-2"></a>
+                    <a href="https://i.imgur.com/XcpMF3q.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/XcpMF3q.png" class="img-fluid" alt="web-2"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
