--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -171,8 +171,8 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/nh04Zlb.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/nh04Zlb.png" class="img-fluid" alt="web-3"></a>
+                    <a href="https://i.imgur.com/4z7CP8j.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/4z7CP8j.png" class="img-fluid" alt="web-3"></a>
                   </div>
                 </div>
               </div>
