--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -124,9 +124,9 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory">
+          <div class="single_catagory text-center">
             <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/"
-              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
+              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
           </div>
         </div>
       </div>
