--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="details_catagory_wrap">
-          <div class="col-sm-2 single_catagory ">
+          <div class="col-sm-4 single_catagory ">
             <span>Category</span>
             <h4>Concepts & Replications</h4>
           </div>
@@ -124,7 +124,7 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory">
+          <div class="single_catagory text-center">
             <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
                 class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
             <ul class="dropdown-menu">
