--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -96,7 +96,7 @@
         <div class="col-lg-12">
           <div class="main-title">
             <span>Line Status Overview</span>
-            <h1>Train Delays Checker V3 </h1>
+            <h1>Train Delays Checker</h1>
           </div>
         </div>
 
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="single_catagory text-center">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/"
+            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker/"
               target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
           </div>
         </div>
