2025-01 Feature Update for Version 2501 (4.4.1)

--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
-    
+    <link rel="stylesheet" href="css/dark-mode.css">
+
 </head>
 
 <body>
@@ -52,9 +53,11 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li class="active"><a href="./about.html">About</a></li>
-                                    <li><a href="./works-by-nrfz.html">Works by NRFZ</a></li>
+                                    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
-
+                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+                                            title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
+                                    </li>
                                 </ul>
                             </div>
 
@@ -233,7 +236,8 @@
                         <div class="period-date-aa">
                             2023
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)
+                            </h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Base Sergeant Major Coin (Supply Base Central)
                             </p>
@@ -245,7 +249,8 @@
                         <div class="period-date-aa">
                             2019
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
+                            Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Graduated from ITE <br>
                                 - ITE Gold Course Medal/Graduation Ceremony <br>
@@ -260,7 +265,8 @@
                         <div class="period-date-aa">
                             2018
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
+                            Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Service Star Award (Gold) <br>
                                 - Director's List (Year 2) <br>
@@ -276,7 +282,8 @@
                         <div class="period-date-aa">
                             2017
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical Education (ITE)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
+                            Education (ITE)</h4>
                             <p style="font-size: 15px; text-align: justify;">
                                 - Director's List (Year 1) <br>
                                 - Edusave Character Award <br>
@@ -314,7 +321,8 @@
                         <div class="period-date-exp">
                             Dec 2022 - Jul 2024
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)
+                            </h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Supply Assistant (GE) (2) - SBC CP ASA <br> <b>Sep 2023 - Jul 2024</b><br>
                                 - Supply Assistant (GE) (1) - SBC CP GE Store - SBC CP ASA <br> <b>Dec 2022 - Sep
@@ -340,7 +348,8 @@
                         <div class="period-date-exp">
                             Mar 2021 - Aug 2021
                         </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Housing & Development Board</h4>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Housing & Development Board
+                            </h4>
                             <p style="font-size: 15px; text-align: left;">
                                 - Intern, Information Services Group <br>
                             </p>
@@ -479,6 +488,8 @@
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
+
+    <script src="js/theme.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
