--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -7,17 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>NRFZ | Works by NRFZ</title>
+    <title>NRFZ | Works By NRFZ</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 
 </head>
 
@@ -51,9 +52,10 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li class="active"><a href="./works-by-nrfz.html">Works by NRFZ</a></li>
+                                    <li class="active"><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
-
+                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
+                                                class="fa-solid fa-moon"></i></button></li>
                                 </ul>
                             </div>
 
@@ -65,7 +67,8 @@
     </header>
 
 
-    <section class="breadcrumb-area-subp bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area-subp bg-img bg-overlay"
+        style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -74,10 +77,10 @@
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="index.html"> Home</a>
                                 </li>
-                                <li class="breadcrumb-item active" aria-current="page">Works by NRFZ</li>
+                                <li class="breadcrumb-item active" aria-current="page">Works By NRFZ</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">Works by NRFZ</h2>
+                        <h2 class="page-title">Works By NRFZ</h2>
                     </div>
                 </div>
             </div>
@@ -104,19 +107,18 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                data-wow-delay="100ms">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/EiaJAoM.png" alt>
-                    <div class="hover-content">
-                        <h4>EICW - Implementation Brainstorming</h4>
-                        <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
-                                class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i
-                                class="fa-solid fa-expand"></i></a>
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/EiaJAoM.png" alt>
+                        <div class="hover-content">
+                            <h4>EICW - Implementation Brainstorming</h4>
+                            <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -358,8 +360,6 @@
     </div>
 
 
-
-
     <footer class="footer-area">
         <div class="container container-xxl">
             <div class="row">
@@ -393,6 +393,8 @@
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
+
+    <script src="js/theme.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
