--- a/worksbynrfz/hydrationreg.html
+++ b/worksbynrfz/hydrationreg.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
   <link rel="stylesheet" href="../css/swiper-bundle.min.css">
   <link rel="stylesheet" href="../css/glightbox.min.css">
@@ -55,9 +56,11 @@
                 <ul id="nav">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="../about.html">About</a></li>
-                  <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
+                  <li class="active"><a href="../works-by-nrfz.html">Works By NRFZ</a></li>
                   <li><a href="../blog.html">Blog</a></li>
-
+                  <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
+                        class="fa-solid fa-moon"></i></button>
+                  </li>
                 </ul>
               </div>
 
@@ -131,7 +134,7 @@
     </div>
   </section>
 
-  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+  <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container">
         <div class="row justify-content-center">
@@ -188,7 +191,9 @@
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-    </script>
+  </script>
+
+  <script src="../js/theme.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
