2025-01 Cumulative Update for Version 2501 (4.4.10)

--- a/worksbynrfz/eicw/eicw-interactive copy.html
+++ b/worksbynrfz/eicw/eicw-interactive copy.html
@@ -71,34 +71,19 @@
     </div>
   </header>
 
-
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-          <div class="breadcrumb-content text-center">
+  <section class="wbnrfz-summ-micro clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="col-lg-12">
+          <div class="main-title">
             <nav aria-label="breadcrumb">
-              <ol class="breadcrumb justify-content-center">
+              <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html"> Home</a>
                 </li>
                 <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">EICW - Implementation Brainstorming</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <section class="wbnrfz-summ clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="col-lg-12">
-          <div class="main-title">
-            <span>LTA's New Wayfinding System</span>
             <h1>Experimenting Improvements of Current Wayfinding</h1>
           </div>
         </div>
@@ -127,72 +112,57 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory text-center">
-            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
-                class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
-                  download>First Edition</a></li>
-              <li><a class="dropdown-item" href="../worksbynrfz/eicw/eicw-interactive.html">View Microsite (WIP)</a></li>
-            </ul>
-            <a class="btn wbnrfz_btn"
-              href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
-                class="fa-solid fa-external-link"></i>&nbsp; View in Google
-              Drive</a>
-          </div>
         </div>
       </div>
     </div>
   </section>
 
+  <section class="breadcrumb-area bg-img parallax" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+      </div>
+    </div>
+  </section>
+
+
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
+      <div class="container container-xxl">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center;">A self-made handbook of how I explored different ways and ideas to
-                      make the current Wayfinding system better. <br>
 
-                      Covered in this Handbook:<br>
-                      - Design Improvements <br>
-                      - Font and Color Palettes <br>
-                      - Design Ideas Brainstorming
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Preface</h2>
+                    <p style="text-align: left;">The new Wayfinding system was first launched on the Thomson-East
+                      Coast Line stations. It spots a new design
+                      system, where the emphasis was mainly on iconographies, rather than pure texts. I for one, am a
+                      huge fan of this
+                      new design. I love icons and pictorials as compared to texts.
+                      Of course, with every new implementations, there has got to be areas that can be improved, and in
+                      this book, I will
+                      be brainstorming on ideas on how to make the current system better. Do take note, these are just
+                      ideas and
+                      concepts, and technicalities like Dimensions & Measurements will not be taken into account.
+                      Overall Assets and Designs' credit go to the Land Transport Authority.
                     </p>
                   </div>
                 </div>
               </div>
             </div>
 
-
             <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
               <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
 
-            <div class="details_single_img">
-              <div class="row">
-                <div class="col-lg-6 col-md-6">
-                  <div class="thumb">
-                    <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                  <div class="thumb">
-                    <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
+
   </section>
 
 
