2025-01 Cumulative Update for Version 2501 (4.4.11)

--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -222,7 +222,7 @@
             <div class="column column-pic">
               <figcaption>
                 <a href="../../img/eicw/wo1-light.png" id="wo1" class="portfolio-img">
-                  <img src="../../img/eicw/wo1-light.png" id="wo1-img" class="img-fluid" alt="wo1">
+                  <img src="../../img/eicw/wo1-light.png" id="wo1-img" class="img-fluid" alt="wo1" style="border-radius: 20px;">
                 </a>
               </figcaption>
             </div>
@@ -230,7 +230,7 @@
             <div class="column column-pic">
               <figcaption>
                     <a href="../../img/eicw/wo2-light.png" id="wo2" class="portfolio-img">
-                      <img src="../../img/eicw/wo2-light.png" id="wo2-img" class="img-fluid" alt="wo2">
+                      <img src="../../img/eicw/wo2-light.png" id="wo2-img" class="img-fluid" alt="wo2" style="border-radius: 20px;">
                     </a>
               </figcaption>
             </div>
