--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -233,7 +233,7 @@
                     </figcaption>
                   </div>
 
-                  <video id="eicw-vid1" autoplay muted loop playsinline width="100%" class="column-vid">
+                  <video id="eicw-vid1" autoplay controls muted loop playsinline width="100%" class="column-vid">
                     <source src="../../img/eicw/eicw-vid1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
@@ -246,18 +246,6 @@
       </div>
     </div>
   </section>
-
-  <section class="parallax-video parallax" id="cv-img">
-    <div class="details_single_img">
-      <div class="row">
-
-      </div>
-    </div>
-  </section>
-
-
-
-
 
 
   <!-- Author -->
