--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -118,7 +118,7 @@
               <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
                 title="Facebook">
                 <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Train Delays Checker"
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Experimenting Improvements of Current Wayfinding"
                 title="X (Twitter)">
                 <i class="fa-brands fa-x-twitter"></i></a>
               <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
