--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -71,126 +71,13 @@
     </div>
   </header>
 
-  <section class="wbnrfz-summ-micro clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container container-xxl">
-        <div class="col-lg-12">
-          <div class="main-title">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="../../index.html"> Home</a>
-                </li>
-                <li class="breadcrumb-item"><a href="../../works-by-nrfz.html"> Works By NRFZ</a>
-                </li>
-              </ol>
-            </nav>
-            <h1>Experimenting Improvements of Current Wayfinding</h1>
-          </div>
-        </div>
-
-        <div class="details_catagory_wrap">
-          <div class="col-sm-4 single_catagory ">
-            <span>Category</span>
-            <h4>Concepts & Replications</h4>
-          </div>
-          <div class="col-sm-2 single_catagory">
-            <span>Project Year</span>
-            <h4>2024 - 2025</h4>
-          </div>
-          <div class="col-sm-2 single_catagory">
-            <span>Share Project</span>
-            <div class="social_links">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/eicw/eicw-interactive.html"
-                title="Facebook">
-                <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/eicw/eicw-interactive.html&text= Experimenting Improvements of Current Wayfinding"
-                title="X (Twitter)">
-                <i class="fa-brands fa-x-twitter"></i></a>
-              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                  class="fa-solid fa-link"></i>
-                <p class="clipboard-copied" style="font-size: 12px;"></p>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="breadcrumb-area bg-img parallax" id="cv-img"
-    style="background-image: url(../../img/eicw/cover-light.png)">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-      </div>
-    </div>
-  </section>
-
-  <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container container-xxl">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="details_info">
-              <div class="row justify-content-center">
-                <div class="col-lg-12">
-                  <div class="info justify-content-center">
-
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold;">Preface</h2>
-                    <p style="text-align: left;">The new Wayfinding system was first launched on the Thomson-East
-                      Coast Line stations. It spots a new design
-                      system, where the emphasis was mainly on iconographies, rather than pure texts. I for one, am a
-                      huge fan of this new design.
-                      <br><br>I love icons and pictorials as compared to texts.
-                      Of course, with every new implementations, there has got to be areas that can be improved, and in
-                      this microsite, I will be brainstorming on ideas on how to make the current system better. Do take
-                      note, these are just
-                      ideas and concepts, and technicalities like Dimensions & Measurements will not be taken into
-                      account.
-                      Overall Assets and Designs' credit go to the Land Transport Authority.
-                      <br><br> The Colour Palettes provided here are matched to be identical to the real-life
-                      counterparts as
-                      well.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <hr>
-
-
-            <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">Font
-              Typeface</h2>
-            <div class="banner-eicw wow fadeInUp" data-wow-delay="150ms">
-              <a href="../../img/eicw/typeface-light.png" id="tf" class="portfolio-img">
-                <img src="../../img/eicw/typeface-light.png" id="tf-img" class="img-fluid" alt="cover-page">
-              </a>
-            </div>
-
-            <hr>
-
-            <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">Colour
-              Palettes</h2>
-            <div class="banner-eicw wow fadeInUp" data-wow-delay="150ms">
-              <a href="../../img/eicw/palettes-light.png" id="pl" class="portfolio-img">
-                <img src="../../img/eicw/palettes-light.png" id="pl-img" class="img-fluid" alt="cover-page">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
-
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ci-img"
-    style="background-image: url(../../img/eicw/c-i-light.png)">
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="iu-img"
+    style="background-image: url(../../img/eicw/iu-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Changes & Improvements over
-              the Current Version</h2>
+            <h2 class="page-title">Incremental Updates - Labels</h2>
           </div>
         </div>
       </div>
@@ -245,7 +132,7 @@
 
           <hr>
 
-          <div class="col-lg-12">
+          <!-- <div class="col-lg-12">
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
@@ -274,11 +161,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <hr>
 
-          <div class="col-lg-12">
+          <!-- <div class="col-lg-12">
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
@@ -322,7 +209,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -330,14 +217,14 @@
         <div class="col-pg text-center">
           <div class="block-27">
             <ul>
-              <!-- <li><a href="#">&lt;</a></li> -->
-              <li class="active"><span>1</span></li>
-              <!-- <li><a href="eicw-interactive-2.html">2</a></li> -->
+              <li><a href="eicw-interactive.html">&lt;</a></li>
+              <li><a href="eicw-interactive.html">1</a></li>
+              <li class="active"><a href="#">2</a></li>
               <!-- <li><a href="#">3</a></li>
                         <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li> 
-                    -->
-              <!-- <li><a href="eicw-interactive-2.html">&gt;</a></li> -->
+                        <li><a href="#">5</a></li>  -->
+
+              <!-- <li><a href="#">&gt;</a></li> -->
             </ul>
           </div>
         </div>
@@ -415,102 +302,99 @@
     });
 
     function updateHrefForDarkMode() {
-      const coverSect = document.getElementById('cv-img');
-      const ciSect = document.getElementById('ci-img');
+      const iuSect = document.getElementById('iu-img');
 
-      const tf_link = document.getElementById('tf');
-      const tf_img = document.getElementById('tf-img');
+      // const tf_link = document.getElementById('tf');
+      // const tf_img = document.getElementById('tf-img');
 
-      const pl_link = document.getElementById('pl');
-      const pl_img = document.getElementById('pl-img');
+      // const pl_link = document.getElementById('pl');
+      // const pl_img = document.getElementById('pl-img');
 
-      const wo1_link = document.getElementById('wo1');
-      const wo1_img = document.getElementById('wo1-img');
+      // const wo1_link = document.getElementById('wo1');
+      // const wo1_img = document.getElementById('wo1-img');
 
-      const wo2_link = document.getElementById('wo2');
-      const wo2_img = document.getElementById('wo2-img');
+      // const wo2_link = document.getElementById('wo2');
+      // const wo2_img = document.getElementById('wo2-img');
 
-      const exit_link = document.getElementById('exit');
-      const exit_img = document.getElementById('exit-img');
+      // const exit_link = document.getElementById('exit');
+      // const exit_img = document.getElementById('exit-img');
 
-      const lift1_link = document.getElementById('lift1');
-      const lift1_img = document.getElementById('lift1-img');
+      // const lift1_link = document.getElementById('lift1');
+      // const lift1_img = document.getElementById('lift1-img');
 
-      const lift2_link = document.getElementById('lift2');
-      const lift2_img = document.getElementById('lift2-img');
+      // const lift2_link = document.getElementById('lift2');
+      // const lift2_img = document.getElementById('lift2-img');
 
-      const vid1 = document.getElementById('eicw-vid1');
-      const vid1Source = vid1.querySelector('source');
+      // const vid1 = document.getElementById('eicw-vid1');
+      // const vid1Source = vid1.querySelector('source');
 
-      const vid2 = document.getElementById('eicw-vid2');
-      const vid2Source = vid2.querySelector('source');
+      // const vid2 = document.getElementById('eicw-vid2');
+      // const vid2Source = vid2.querySelector('source');
 
-      const vid3 = document.getElementById('eicw-vid3');
-      const vid3Source = vid3.querySelector('source');
+      // const vid3 = document.getElementById('eicw-vid3');
+      // const vid3Source = vid3.querySelector('source');
 
       const isDarkMode = document.body.classList.contains('dark-mode');
 
       if (isDarkMode) {
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-dark.png')";
-        ciSect.style.backgroundImage = "url('../../img/eicw/c-i-dark.png')";
+        iuSect.style.backgroundImage = "url('../../img/eicw/iu-dark.png')";
 
-        tf_link.href = '../../img/eicw/typeface-dark.png';
-        tf_img.src = '../../img/eicw/typeface-dark.png';
+        // tf_link.href = '../../img/eicw/typeface-dark.png';
+        // tf_img.src = '../../img/eicw/typeface-dark.png';
 
-        pl_link.href = '../../img/eicw/palettes-dark.png';
-        pl_img.src = '../../img/eicw/palettes-dark.png';
+        // pl_link.href = '../../img/eicw/palettes-dark.png';
+        // pl_img.src = '../../img/eicw/palettes-dark.png';
 
-        wo1_link.href = '../../img/eicw/wo1-dark.png';
-        wo1_img.src = '../../img/eicw/wo1-dark.png';
+        // wo1_link.href = '../../img/eicw/wo1-dark.png';
+        // wo1_img.src = '../../img/eicw/wo1-dark.png';
 
-        wo2_link.href = '../../img/eicw/wo2-dark.png';
-        wo2_img.src = '../../img/eicw/wo2-dark.png';
+        // wo2_link.href = '../../img/eicw/wo2-dark.png';
+        // wo2_img.src = '../../img/eicw/wo2-dark.png';
 
-        exit_link.href = '../../img/eicw/exit-dark.png';
-        exit_img.src = '../../img/eicw/exit-dark.png';
+        // exit_link.href = '../../img/eicw/exit-dark.png';
+        // exit_img.src = '../../img/eicw/exit-dark.png';
 
-        lift1_link.href = '../../img/eicw/lift-dark1.png';
-        lift1_img.src = '../../img/eicw/lift-dark1.png';
+        // lift1_link.href = '../../img/eicw/lift-dark1.png';
+        // lift1_img.src = '../../img/eicw/lift-dark1.png';
 
-        lift2_link.href = '../../img/eicw/lift-dark2.png';
-        lift2_img.src = '../../img/eicw/lift-dark2.png';
+        // lift2_link.href = '../../img/eicw/lift-dark2.png';
+        // lift2_img.src = '../../img/eicw/lift-dark2.png';
 
-        vid1Source.src = '../../img/eicw/eicw-vid1-dark.mp4';
-        vid2Source.src = '../../img/eicw/eicw-vid2-dark.mp4';
-        vid3Source.src = '../../img/eicw/eicw-vid3-dark.mp4';
+        // vid1Source.src = '../../img/eicw/eicw-vid1-dark.mp4';
+        // vid2Source.src = '../../img/eicw/eicw-vid2-dark.mp4';
+        // vid3Source.src = '../../img/eicw/eicw-vid3-dark.mp4';
 
       } else {
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-light.png')";
-        ciSect.style.backgroundImage = "url('../../img/eicw/c-i-light.png')";
+        iuSect.style.backgroundImage = "url('../../img/eicw/iu-light.png')";
 
-        tf_link.href = '../../img/eicw/typeface-light.png';
-        tf_img.src = '../../img/eicw/typeface-light.png';
+        // tf_link.href = '../../img/eicw/typeface-light.png';
+        // tf_img.src = '../../img/eicw/typeface-light.png';
 
-        pl_link.href = '../../img/eicw/palettes-light.png';
-        pl_img.src = '../../img/eicw/palettes-light.png';
+        // pl_link.href = '../../img/eicw/palettes-light.png';
+        // pl_img.src = '../../img/eicw/palettes-light.png';
 
-        wo1_link.href = '../../img/eicw/wo1-light.png';
-        wo1_img.src = '../../img/eicw/wo1-light.png';
+        // wo1_link.href = '../../img/eicw/wo1-light.png';
+        // wo1_img.src = '../../img/eicw/wo1-light.png';
 
-        wo2_link.href = '../../img/eicw/wo2-light.png';
-        wo2_img.src = '../../img/eicw/wo2-light.png';
+        // wo2_link.href = '../../img/eicw/wo2-light.png';
+        // wo2_img.src = '../../img/eicw/wo2-light.png';
 
-        exit_link.href = '../../img/eicw/exit-light.png';
-        exit_img.src = '../../img/eicw/exit-light.png';
+        // exit_link.href = '../../img/eicw/exit-light.png';
+        // exit_img.src = '../../img/eicw/exit-light.png';
 
-        lift1_link.href = '../../img/eicw/lift-light1.png';
-        lift1_img.src = '../../img/eicw/lift-light1.png';
+        // lift1_link.href = '../../img/eicw/lift-light1.png';
+        // lift1_img.src = '../../img/eicw/lift-light1.png';
 
-        lift2_link.href = '../../img/eicw/lift-light2.png';
-        lift2_img.src = '../../img/eicw/lift-light2.png';
+        // lift2_link.href = '../../img/eicw/lift-light2.png';
+        // lift2_img.src = '../../img/eicw/lift-light2.png';
 
-        vid1Source.src = '../../img/eicw/eicw-vid1-light.mp4';
-        vid2Source.src = '../../img/eicw/eicw-vid2-light.mp4';
-        vid3Source.src = '../../img/eicw/eicw-vid3-light.mp4';
+        // vid1Source.src = '../../img/eicw/eicw-vid1-light.mp4';
+        // vid2Source.src = '../../img/eicw/eicw-vid2-light.mp4';
+        // vid3Source.src = '../../img/eicw/eicw-vid3-light.mp4';
       }
-      vid1.load();
-      vid2.load();
-      vid3.load();
+      // vid1.load();
+      // vid2.load();
+      // vid3.load();
     }
   </script>
 
